# licensepp

./: .travis.yml  CMakeLists.txt
.github/workflows/: cmake.yml
cmake/: FindCryptoPP.cmake  FixCompileFlags.cmake  versioning.cmake
doxygen/: README_DOXYGEN.md
src/: CMakeLists.txt
src/cli/: CMakeLists.txt
src/cli/src/: main.cc
src/cli/src/licensing/: license-manager-key-register.cc  license-manager-key-register.h  license-manager.h
src/lib/: CMakeLists.txt
src/lib/impl/Ripe/: Ripe.cc
src/lib/impl/crypto/: aes.cc  base16.cc  base64.cc  rsa.cc
src/lib/impl/license++/: issuing-authority.cc  json-object.cc  license.cc  utils.cc
src/lib/include/private/Ripe/: Ripe.h
src/lib/include/private/crypto/: aes.h  base16.h  base64.h  rsa.h
src/lib/include/private/license++/: config.h.cmake  json-object.h  utils.h
src/lib/include/public/license++/: base-license-manager.h  issuing-authority.h  license-exception.h  license.h
src/sample/: CMakeLists.txt
src/sample/src/: license-manager.h  main.cc
test/: CMakeLists.txt
test/src/: license-manager-for-test.h  license-manager-test.h  test.h  testx.h
